dark mode icon layout fixed for smaller screens

--- a/style.css
+++ b/style.css
@@ -399,6 +399,9 @@ header {
       justify-content: space-between;
       align-items: center;
     }
+    #theme-toggle{
+      top:0.5rem;
+    }
 
     .navbar {
       width: auto;
